# Axia-Network-cumulus

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  crates.js  search-index.js  source-files.js
allychain-template/: README.md
allychain-template/node/: Cargo.toml
allychain-template/node/src/: chain_spec.rs  cli.rs  command.rs  service.rs
allychain-template/pallets/template/: Cargo.toml
allychain-template/runtime/: Cargo.toml
allychain-template/runtime/src/: lib.rs
allychain_collator/: all.html  fn.main.html  index.html  sidebar-items.js
allychain_info/: all.html  index.html
allychain_template_runtime/: all.html  constant.DAYS.html  constant.EXISTENTIAL_DEPOSIT.html  constant.HOURS.html  constant.MICROUNIT.html  constant.MILLISECS_PER_BLOCK.html  constant.MILLIUNIT.html  constant.MINUTES.html  constant.PRIMARY_PROBABILITY.html  constant.SLOT_DURATION.html  constant.UNIT.html  constant.VERSION.html  constant.WASM_BINARY.html  constant.WASM_BINARY_BLOATY.html  enum.Call.html  enum.Event.html  enum.MultiAddress.html  enum.OriginCaller.html  fn.native_version.html  index.html  sidebar-items.js  struct.Ancestry.html  struct.ExecutiveBody.html  struct.ExistentialDeposit.html  struct.GenesisConfig.html  struct.MaxAuthorities.html  struct.MaxCandidates.html  struct.MaxDownwardMessageWeight.html  struct.MaxInstructions.html  struct.MaxInvulnerables.html  struct.MaxLocks.html  struct.MaxReserves.html  struct.MinCandidates.html  struct.MinimumPeriod.html  struct.Offset.html  struct.OnRuntimeUpgrade.html  struct.OperationalFeeMultiplier.html  struct.Origin.html  struct.PalletInfo.html  struct.ParentOrParentsExecutivePlurality.html  (+76 more)
allychains_common/: all.html  constant.AVERAGE_ON_INITIALIZE_RATIO.html  constant.DAYS.html  constant.HOURS.html  constant.MAXIMUM_BLOCK_WEIGHT.html  constant.MILLISECS_PER_BLOCK.html  constant.MINUTES.html  constant.NORMAL_DISPATCH_RATIO.html  constant.SLOT_DURATION.html  index.html  sidebar-items.js  type.AccountId.html  type.AccountIndex.html  type.AssetId.html  type.AuraId.html  type.Balance.html  type.BlockNumber.html  type.DigestItem.html  type.Hash.html  type.Index.html  type.Signature.html
axia-allychains/: Cargo.toml
axia-allychains/allychains-common/: Cargo.toml
axia-allychains/allychains-common/src/: impls.rs  lib.rs
axia-allychains/betanet/: Cargo.toml
axia-allychains/betanet/src/: lib.rs
axia-allychains/pallets/allychain-info/: Cargo.toml
axia-allychains/pallets/ping/: Cargo.toml
axia-allychains/pallets/ping/src/: lib.rs
axia-allychains/res/: statemine.json  statemine_genesis.json  statemint.json
axia-allychains/shell/: Cargo.toml
axia-allychains/shell/src/: lib.rs
axia-allychains/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
axia-allychains/statemine/: Cargo.toml
axia-allychains/statemine/src/: constants.rs  lib.rs
axia-allychains/statemine/src/weights/: pallet_assets.rs  pallet_balances.rs  pallet_collator_selection.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_session.rs  pallet_timestamp.rs  pallet_uniques.rs  pallet_utility.rs
axia-allychains/statemint/: Cargo.toml
axia-allychains/statemint/src/: constants.rs  lib.rs
axia-allychains/statemint/src/weights/: pallet_balances.rs  pallet_collator_selection.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_session.rs  pallet_timestamp.rs  pallet_utility.rs
axia-allychains/westmint/: Cargo.toml
axia-allychains/westmint/src/: constants.rs  lib.rs
axia-allychains/westmint/src/weights/: pallet_assets.rs
axia_collator/: all.html  fn.main.html  index.html  sidebar-items.js
betanet_runtime/: all.html  constant.DAYS.html  constant.EPOCH_DURATION_IN_BLOCKS.html  constant.HOURS.html  constant.MICROROC.html  constant.MILLIROC.html  constant.MILLISECS_PER_BLOCK.html  constant.MINUTES.html  constant.PRIMARY_PROBABILITY.html  constant.ROC.html  constant.SLOT_DURATION.html  constant.VERSION.html  constant.WASM_BINARY.html  constant.WASM_BINARY_BLOATY.html  constant.WEIGHT_PER_SECOND.html  enum.BalancesCall.html  enum.Call.html  enum.DispatchClass.html  enum.Event.html  enum.Everything.html  enum.Nothing.html  enum.OriginCaller.html  enum.TimestampCall.html  (+110 more)
client/cli/: Cargo.toml
client/cli/src/: lib.rs
client/collator/: Cargo.toml
client/collator/src/: lib.rs
client/consensus/aura/: Cargo.toml
client/consensus/aura/src/: import_queue.rs  lib.rs
client/consensus/common/: Cargo.toml
client/consensus/common/src/: allychain_consensus.rs  lib.rs  parachain_consensus.rs  tests.rs
client/network/: Cargo.toml
client/network/src/: lib.rs  tests.rs  wait_on_relay_chain_block.rs
client/network/tests/: sync.rs
client/pov-recovery/: Cargo.toml
client/pov-recovery/src/: active_candidate_recovery.rs  lib.rs
client/pov-recovery/tests/: pov_recovery.rs
client/service/: Cargo.toml
client/service/src/: genesis.rs  lib.rs
pallets/asset-tx-payment/: Cargo.toml
pallets/asset-tx-payment/src/: lib.rs  payment.rs  tests.rs
pallets/aura-ext/: Cargo.toml
pallets/aura-ext/src/: lib.rs
pallets/collator-selection/: Cargo.toml
pallets/collator-selection/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/parachain-system/: Cargo.toml
pallets/parachain-system/proc-macro/: Cargo.toml
pallets/parachain-system/src/: lib.rs  tests.rs
pallets/parachain-system/src/validate_block/: tests.rs
pallets/xcm/: Cargo.toml
pallets/xcmp-queue/: Cargo.toml
pallets/xcmp-queue/src/: lib.rs  mock.rs  tests.rs
primitives/core/: Cargo.toml
primitives/core/src/: lib.rs
primitives/parachain-inherent/: Cargo.toml
primitives/parachain-inherent/src/: client_side.rs  lib.rs  mock.rs
primitives/timestamp/: Cargo.toml
primitives/utility/: Cargo.toml
primitives/utility/src/: lib.rs
test/client/: Cargo.toml
test/client/src/: lib.rs
test/relay-sproof-builder/: Cargo.toml
test/relay-sproof-builder/src/: lib.rs
test/runtime/: Cargo.toml
test/runtime/src/: lib.rs
test/service/: Cargo.toml
test/service/src/: chain_spec.rs  genesis.rs  lib.rs
test/service/tests/: integration.rs  runtime_upgrade.rs
(+1554 files in other folders)
