[package]
name = "allychain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Axlib Node, ready for hacking together a allychain."
license = "Unlicense"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/cumulus/"
edition = "2018"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
axlib-build-script-utils = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[[bin]]
name = "allychain-collator"
path = "src/main.rs"

[features]
runtime-benchmarks = ["allychain-template-runtime/runtime-benchmarks"]

[dependencies]
derive_more = "0.99.2"
log = "0.4.14"
codec = { package = "axia-scale-codec", version = "2.0.0" }
structopt = "0.3.8"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.3.1"

# RPC related Dependencies
jsonrpc-core = "18.0.0"

# Local Dependencies
allychain-template-runtime = { path = "../runtime" }

# Axlib Dependencies
frame-benchmarking = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
frame-benchmarking-cli = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

pallet-transaction-payment-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

axlib-frame-rpc-system = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
axlib-prometheus-endpoint = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

## Axlib Client Dependencies
sc-basic-authorship = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-chain-spec = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-cli = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-client-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-consensus = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-executor = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-network = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-keystore = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-rpc-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-service = { git = "https://github.com/axia-tech/axia-core", features = ["wasmtime"] , branch = "dev" }
sc-telemetry = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-transaction-pool = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-transaction-pool-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-tracing = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

## Axlib Primitive Dependencies
sp-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-consensus = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-consensus-aura = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-inherents = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-keystore = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-offchain = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-session = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-timestamp = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-transaction-pool = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

# Cumulus dependencies
cumulus-client-cli = { path = "../../client/cli" }
cumulus-client-collator = { path = "../../client/collator" }
cumulus-client-consensus-aura = { path = "../../client/consensus/aura" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-allychain-inherent = { path = "../../primitives/allychain-inherent" }

# AXIA dependencies
axia-cli = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-allychain = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-service = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-test-service = { git = "https://github.com/axia-tech/axia", branch = "dev" }
