[package]
name = 'betanet-runtime'
version = '0.1.0'
authors = ["Axia Technologies <admin@axia.io>"]
edition = '2018'
description = "Simple runtime used by the betanet allychain(s)"

[dependencies]
codec = { package = "axia-scale-codec", version = "2.3.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
allychain-info = { path = "../pallets/allychain-info", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

# Axlib dependencies
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-version = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-session = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-offchain = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-transaction-pool = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-inherents = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-consensus-aura = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }

frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-executive = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-system-rpc-runtime-api = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-assets = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-randomness-collective-flip = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-sudo = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-aura = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }

allychains-common = { path = "../allychains-common", default-features = false }

# Cumulus dependencies
cumulus-pallet-aura-ext = { path = "../../pallets/aura-ext", default-features = false }
cumulus-pallet-allychain-system = { path = "../../pallets/allychain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../primitives/timestamp", default-features = false }
cumulus-primitives-utility = { path = "../../primitives/utility", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../pallets/dmp-queue", default-features = false }
cumulus-pallet-xcmp-queue = { path = "../../pallets/xcmp-queue", default-features = false }
cumulus-pallet-xcm = { path = "../../pallets/xcm", default-features = false }
cumulus-ping = { path = "../pallets/ping", default-features = false }

# AXIA dependencies
axia-allychain = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-builder = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-executor = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
pallet-xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"allychain-info/std",
	"allychains-common/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-ping/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
]
